fix: include overflow text in topic list

--- a/src/assets/styles/components/_card.scss
+++ b/src/assets/styles/components/_card.scss
@@ -146,10 +146,8 @@
 
 	.overflow {
 		color: $grey-600;
-		display: inline;
 		font-size: rem(14);
-		margin-left: rem(8);
-
+		margin-left: rem(4);
 	}
 }
 
